--- a/.eslintrc
+++ b/.eslintrc
@@ -2,9 +2,9 @@
   "extends": "eslint-config-airbnb",
   "parser": "babel-eslint",
   "globals": {
+    "If": true,
     "Else": true,
     "$": true,
-    "browser": true
   },
   "env": {
     "mocha": true
